Restore PHP5.6 compatibility (reserved keywords)
