# doc/swagger.yaml
@@ -26,7 +26,7 @@ tags:
 schemes:
   - http
 paths:
-  /session/list:
+  /session/active:
     get:
       tags:
         - session
@@ -105,7 +105,7 @@ paths:
       responses:
         '200':
           description: Member removed
-  '/session/protected/{id}':
+  '/session/haspassword/{id}':
     get:
       tags:
         - session
